dark mode contrast fix again

--- a/selo.css
+++ b/selo.css
@@ -89,6 +89,12 @@ details
   
     outline: 0.2em solid var(--accent-four);
   }
+  nav li a:not(.current):focus, a.current:focus {
+    outline-color: var(--accent-two);
+    background-color: var(--walo);
+    color: var(--accent-four);
+
+  }
   
   
    
@@ -101,9 +107,15 @@ details
     --accent-two: #25484b;
     --accent-three: #fcc222;
     --accent-four: #d84806;
+    --accent-four: #fa7638;
+
     --pale: #585555;
     --notes-green:rgb(32, 53, 44);
-    --notes-yellow: rgb(70, 70, 15);
+    --notes-green:rgb(26, 40, 34);
+
+    --notes-yellow: rgb(49, 49, 11);
+    --notes-yellow: rgb(51, 51, 12);
+
     --notes-pink: rgb(56, 5, 44);
     --notes-orange: rgb(43, 27, 21);
     --notes-blue: rgb(3, 11, 48);
@@ -123,9 +135,15 @@ details
     color: var(--walo);
     
   }
-  nav ul:first-child li a:visited, nav ul:first-child li a{
+  nav li a:visited, nav li a{
+    color: var(--walo);
+    border-color: var(--walo);
+  }
+  nav li a:not(.current):focus, a.current:focus, nav li a:visited:focus {
+    outline-color: var(--accent-three);
+    background-color: var(--walo);
     color: var(--pimeja);
-    border-color: var(--pimeja);
+
   }
   
 }
@@ -439,12 +457,7 @@ footer {
     text-decoration-color: var(--accent-two);
     outline-color: var(--accent-two);
   }
-  nav li a:not(.current):focus, a.current:focus {
-    outline-color: var(--accent-two);
-    background-color: var(--walo);
-    color: var(--accent-four);
-
-  }
+  
   ul.notes-menu > li > a:focus {
     background-color: var(--accent-four);
     color: var(--walo);
